fix default sub picking

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -24,6 +24,7 @@ hls-bitrate=max
 
 
 ## priority
+subs-with-matching-audio=yes
 alang=ja,jp,jap,jpn,Japanese,en,eng,enUS,en-US,English
 slang=en,eng,enUS,en-US,English,ja,jp,jap,jpn,Japanese
 
