--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -24,6 +24,8 @@ hls-bitrate=max
 
 
 ## priority
+#https://github.com/mpv-player/mpv/issues/12202#issuecomment-1685042506
+#looks like old functionality will be restored someday.
 subs-with-matching-audio=yes
 alang=ja,jp,jap,jpn,Japanese,en,eng,enUS,en-US,English
 slang=en,eng,enUS,en-US,English,ja,jp,jap,jpn,Japanese
