--- a/sway/config
+++ b/sway/config
@@ -7,7 +7,8 @@ default_border pixel 2
 
 #disable floating windows titlebar
 default_floating_border pixel 2 
-
+hide_edge_borders vertical
+mouse_warping none
 #Font
 font pango:Roboto 13
 #align  title
@@ -15,40 +16,22 @@ title_align center
 #exec /usr/share/sway-git/scripts/inactive-windows-transparency.py --opacity 0.85
 
 # class                 border  backgr. text    indicator child_border
-client.focused          #0039e6 #333f6b #ffffff #2e9ef4   #0039e6
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+#client.focused          #0039e6 #333f6b #ffffff #2e9ef4   #0039e6
+#client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+#client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+#client.urgent           #2f343a #900000 #ffffff #900000   #900000
+#client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
-## Base16 Tokyo Night Dark
-# Author: Michaël Ball
-
-#set $base00 #1a1b26
-#set $base01 #16161e
-#set $base02 #2f3549
-#set $base03 #444b6a
-#set $base04 #787c99
-#set $base05 #a9b1d6
-#set $base06 #cbccd1
-#set $base07 #d5d6db
-#set $base08 #c0caf5
-#set $base09 #a9b1d6
-#set $base0A #0db9d7
-#set $base0B #9ece6a
-#set $base0C #b4f9f8
-#set $base0D #2ac3de
-#set $base0E #bb9af7
-#set $base0F #f7768e
+include themes/base16-gruvbox-dark-hard.config
 
 # Basic color configuration using the Base16 variables for windows and borders.
 # Property Name         Border  BG      Text    Indicator Child Border
-#client.focused          $base05 $base0D $base00 $base0D $base0D
-#client.focused_inactive $base01 $base01 $base05 $base03 $base01
-#client.unfocused        $base01 $base00 $base05 $base01 $base01
-#client.urgent           $base08 $base08 $base00 $base08 $base08
-#client.placeholder      $base00 $base00 $base05 $base00 $base00
-#client.background       $base07
+client.focused          $base05 $base0D $base00 $base0D $base0D
+client.focused_inactive $base01 $base01 $base05 $base03 $base01
+client.unfocused        $base01 $base00 $base05 $base01 $base01
+client.urgent           $base08 $base08 $base00 $base08 $base08
+client.placeholder      $base00 $base00 $base05 $base00 $base00
+client.background       $base07
 
 #Importing the gtk,icon, and cursor themes:
 #exec_always ~/.config/sway/import-gsettings
@@ -342,9 +325,6 @@ bindsym $mod+Shift+i exec swaync-client -t -sw
 
 
 include /etc/sway/config.d/*
-#include ~/.config/sway/theme
-#include ~/.config/sway/outputs
-#include ~/.config/sway/workspaces
 
 #My Bindings
 # install ttf-font-awesome 6.xx
@@ -428,8 +408,8 @@ bindsym $mod+Print exec ~/.config/sway/screenshot.sh
 #save full screen screenshot
 bindsym Print exec grimshot --notify save screen 
 #Record
-bindsym $mod+F12 exec ~/.config/sway/record.sh -s
-bindsym $mod+Shift+F12 exec ~/.config/sway/record.sh -g
+#bindsym $mod+F12 exec ~/.config/sway/record.sh -s
+#bindsym $mod+Shift+F12 exec ~/.config/sway/record.sh -g
 
 
 #Startup Apps
@@ -460,23 +440,102 @@ exec --no-startup-id xrdb ~/.Xdefaults
 #exec --no-startup-id ~/.config/sway/wallpaper.sh -v
 
 
-#Start window in floating mode
-for_window [app_id="copyq"] floating enable
-for_window [app_id="io.bassi.Amberol"] floating enable
-for_window [app_id="gnome-pomodoro"] floating enable
-for_window [app_id="org.gnome.clocks"] floating enable
-for_window [app_id="connman-gtk"] floating enable
-for_window [class="Steam"] floating enable
-for_window [app_id="polkit-gnome-authentication-agent-1"] floating enable
-for_window [app_id="signal"] floating enable
-for_window [app_id="foot"] opacity 0.98
-# Brave, chrome, chromium
-for_window [title="Picture-in-picture"] floating enable
-#Disable screelock when anything is fullscreen
-for_window [app_id="mpv"] inhibit_idle fullscreen
-for_window [app_id="mpv"] border pixel 0
+#shamefully stolen from https://gitlab.com/that1communist/dotfiles/-/blob/master/.config/sway/modules/win-rules
+#thanks!
+set {
+
+	$game inhibit_idle focus; floating enable; border none; shadows disable
+
+	$popup floating enable; sticky enable; shadows enable
+
+	$float floating enable; shadows enable
+
+	$video inhibit_idle fullscreen; border none; max_render_time off
+
+}
+
+for_window {
+
+#game - inhibit_idle focus; floating enable; border none
+
+	[instance="gamescope"] $game
+	[class="gamescope"] $game
+
+	[class="steam_app.*"] $game
+
+	[instance="steam_app.*"] $game
+
+	[class=".*\.exe"] $game
+	[instance=".*\.exe"] $game
+
+    # Steam
+    [title="Friends List"] $game; [floating] resize set 300 600 
+
+#popup - floating enable; sticky enable
+
+	[app_id="firefox" title="^Picture-in-Picture$"] $popup
+    # chromium
+    [title="Picture-in-picture"] floating enable
+
+	[app_id="galculator"] $popup
+
+	[app_id="pavucontrol"] $popup
+
+#float - floating enable
+
+	#[app_id="org.telegram.desktop"] $float; blur off; shadows disable; inhibit_idle open
+
+    [app_id="polkit-gnome-authentication-agent-1"] $float
+    [app_id="io.bassi.Amberol"] $float
+    [app_id="org.gnome.clocks"] $float
+    [app_id="connman-gtk"] $float
+    [app_id="signal"] floating enable
 
 
-#Open programs in different workspace
-for_window [app_id="org.qbittorrent.qBittorrent"] move to workspace 4
-#for_window [app_id="chromium-browser"] border none
+	[window_role="pop-up,task_dialog,About"] $float; shadows enable
+
+	[window_type="dialog"] $float; shadows enable
+
+	[window_type="utility"] $float; shadows enable
+
+	[window_type="toolbar"] $float; shadows enable
+
+	[window_type="splash"] $float; shadows enable
+
+	[window_type="menu"] $float; shadows enable
+
+	[window_type="dropdown_menu"] $float; shadows enable
+
+	[window_type="popup_menu"] $float; shadows enable
+
+	[window_type="tooltip"] $float; shadows enable
+
+	[window_type="notification"] $float; shadows enable
+
+#video - inhibit_idle fullscreen; border none; max_render_time off
+
+	[app_id="mpv"] $video
+
+	[app_id="vlc"] $video
+
+#misc
+
+    [app_id="foot"] opacity 0.98
+	[app_id="org.telegram.desktop"] blur off; shadows disable
+
+	[class="steam"] max_render_time off; blur disabled
+
+	[app_id="org.telegram.desktop" title="Telegram"] floating disable; inhibit_idle none
+
+	[urgent=latest] focus
+
+	[floating] shadows enable
+
+	[app_id="firefox" title="Firefox — Sharing Indicator"] floating enable; kill
+
+	[title="Wine System Tray"] floating enable; kill
+	[shell="xwayland"] title_format "%title [XWayland]"
+
+    #Open programs in different workspace
+    [app_id="org.qbittorrent.qBittorrent"] move to workspace 4
+}
