--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,190 +1,282 @@
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki (basic and advanced configuring)
-#
-
-# Exec startup
-exec-once=waybar
-exec-once=foot --server
-exec-once=playerctld daemon
-exec-once=swaync
-exec-once=swaybg -i ~/Pictures/Wallpapers/wallpaper
-#exec-once=swayidle -w timeout 290 'notify-send "Locking screen in 10 seconds" ' timeout 300 'swaylock -f' timeout 310 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f'
-exec-once=swayidle -w timeout 290 'notify-send "Locking screen in 10 seconds" ' timeout 300 'swaylock -f' before-sleep 'swaylock -f'
-
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# See https://wiki.hyprland.org/Configuring/Monitors/
+#monitor=,preferred,auto,auto
+monitor=eDP-1, 1920x1080@144.14900, 0x0, 1
 
 
-monitor=,preferred,auto,1
-#monitor=,1920x1080@60,0x0,1
-workspace=DP-1,1
+# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
+# Execute apps at launch
+
+exec-once = dbus-update-activation-environment --systemd --all
+exec-once = systemctl --user import-environment QT_QPA_PLATFORMTHEME
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
+exec-once = waybar --config ~/.config/hypr/waybar/config.jsonc --style ~/.config/hypr/waybar/style.css
+exec-once = swayidle -w timeout 10 'if pgrep -x swaylock; then playerctl pause & hyprctl dispatch dpms off; fi' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle -w timeout 290 'notify-send "Locking screen in 10 seconds" ' timeout 300 'playerctl pause & pactl set-sink-mute 0 toggle & swaylock -f' timeout 310 'hyprctl dispatch dpms off' resume 'pactl set-sink-mute 0 toggle & hyprctl dispatch dpms on' before-sleep 'playerctl pause & pactl set-sink-mute 0 toggle' before-sleep 'swaylock -f' lock 'swaylock -f'
+exec-once = swaybg -i ~/Pictures/Wallpapers/wallpaper -m fill
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = ~/.config/hypr/scripts/theme.sh
+#this is really cool
+exec-once = playerctld daemon
+exec-once = foot --server
+exec-once = nm-applet
+exec-once = batsignal -b -c 30 -d 20 -f 90 -m 15
+#use colours and font from Xdefaults ( for sxiv and other apps )
+#add a little sleep to make qbittorrent apear in tray.
+exec-once = sleep 8 && qbittorrent
+exec-once = xsettingsd
+exec-once = ydotoold
+exec-once = xrdb ~/.Xdefaults
+exec-once = syncthing --no-browser
+
+
+
+# Source a file (multi-file configs)
+# source = ~/.config/hypr/myColors.conf
+
+# Set programs that you use
+$terminal = foot
+$fileManager = lf
+$menu = fuzzel -i -b 1a1a1aff --font='Roboto:weight=bold:size=12'
+
+# Some default env vars.
+env = XCURSOR_SIZE,24
+
+# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    #kb_file=
-    #kb_layout=
-    #kb_model=
-    #kb_options=
-    #kb_rules=
-    follow_mouse=1
-    repeat_rate=30
-    repeat_delay=300
+    repeat_delay = 300
+    repeat_rate = 30
+    accel_profile = flat
+    kb_options = caps:escape
+    kb_file = "/home/shaka/.xkb/symbols/65-percent-escape-tilde-grave"
 
     touchpad {
-        natural_scroll=yes
-        disable_while_typing=yes
+        natural_scroll = true
+        disable_while_typing = true
+        middle_button_emulation = true
     }
-
-    force_no_accel=true
-    sensitivity=0 # -1.0 - 1.0, 0 means no modification.
+    follow_mouse = 1
 }
 
 general {
-    gaps_in=4
-    gaps_out=8
-    border_size=2
-    col.active_border=0xff9399b2
-    col.inactive_border=0xff1e1e2e
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+
+    gaps_in = 5
+    gaps_out = 20
+    border_size = 2
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
 
     layout = dwindle
+
+    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    allow_tearing = false
 }
 
 decoration {
-#    rounding=10
-#    blur=1
-#    blur_size=3 # minimum 1
-#    blur_passes=1 # minimum 1
-#    blur_new_optimizations=1
-    rounding=8
-    blur=true
-    blur_size=3 # minimum 1
-    blur_passes=1 # minimum 1
-    blur_new_optimizations=true
-    drop_shadow=true
-    shadow_range=3
-    shadow_render_power	= 3
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    rounding = 8
+
+    active_opacity = 1.0
+    inactive_opacity = 0.95
+    fullscreen_opacity = 1.0
+
     dim_inactive = true
-    dim_strength = .105
+    dim_strength = 0.1
+
+    shadow_range = 6
+    shadow_render_power = 2
     col.shadow = rgba(1a1a1aee)
+    col.shadow_inactive = 0x50000000
+
+    blur {
+        size = 8
+        passes = 1
+        ignore_opacity = true
+        vibrancy = 0.1696
+    }
+
 }
 
 animations {
-    enabled = true
+  enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+  bezier = linear, 0.0, 0.0, 1.0, 1.0
+  bezier = wind, 0.05, 0.9, 0.1, 1.05
+  bezier = winIn, 0.1, 1.1, 0.1, 1.1
+  bezier = winOut, 0.3, -0.3, 0, 1
+  bezier = slow, 0, 0.85, 0.3, 1
+  bezier = overshot, 0.7, 0.6, 0.1, 1.1
+  bezier = bounce, 1.1, 1.6, 0.1, 0.85
+  bezier = sligshot, 1, -1, 0.15, 1.25
+  bezier = nice, 0, 6.9, 0.5, -4.20
+  
+  animation = windowsIn, 1, 3, slow, popin
+  animation = windowsOut, 1, 4, winOut, popin
+  animation = windowsMove, 1, 3, wind, slide
+  animation = border, 1, 2, linear
+  animation = borderangle, 1, 180, linear, loop #used by rainbow borders and rotating colors
+  animation = fade, 1, 3, overshot
+  animation = workspaces, 1, 3, default
+  animation = windows, 1, 3, bounce, popin
 
 }
 
 dwindle {
-    pseudotile = true # enable pseudotiling on dwindle
-    preserve_split = true
+    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+    pseudotile = true # master switch for pseudotiling. Enabling is bound to mod + P in the keybinds section below
+    preserve_split = true # you probably want this
+}
+
+master {
+    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+    new_is_master = true
 }
 
 gestures {
-    workspace_swipe = true
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    workspace_swipe = false
 }
 
-# example window rules
-# for windows named/classed as abc and xyz
-#windowrule=move 69 420,abc
-#windowrule=size 420 69,abc
-#windowrule=tile,xyz
-#windowrule=float,abc
-#windowrule=pseudo,abc
-#windowrule=monitor 0,xyz
+misc {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+}
 
-# some nice mouse binds
-bindm=SUPER, mouse:272, movewindow
-bindm=SUPER, mouse:273, resizewindow
+# Example per-device config
+# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
+#device:1241:41132:E-Signal_USB_Gaming_Mouse {
+#    scroll_factor = 1.3
+#}
+device:elan0412:01-04f3:3162-touchpad {
+    sensitivity = 0.6
+}
 
-# example binds
-bind=SUPER,X,exec,waylogout --hide-cancel --screenshots --font="Baloo 2" --effect-blur=7x5 --indicator-thickness=10 --ring-color=888888aa --inside-color=1a1a1aff --text-color=eaeaeaaa --line-color=00000000 --ring-selection-color=ff5500aa --inside-selection-color=1a1a1aff --text-selection-color=eaeaeaaa --line-selection-color=00000000 --lock-command="/sbin/swaylock" --logout-command="/sbin/swaymsg exit" --poweroff-command="/sbin/shutdown -a now" --reboot-command="/sbin/shutdown -r now" --selection-label
-
-bind = SUPER, T, exec, foot
-bind = SUPER, Q, killactive,
-bind = SUPERSHIFT, E, exit,
-bind = SUPER, F, togglefloating,
-bind = SUPERSHIFT, F, fullscreen,0
-bind = ALT, Tab, cyclenext
-bind = SUPER, E, exec, dolphin
-bind = SUPER, SPACE, togglefloating,
-bind = SUPER, R, exec, fuzzel -i Tela-circle-dark -b 1a1a1aff --font='Hack:weight=bold:size=13'
-bind = SUPER, P, pseudo,
-
-bind = SUPER, left, movefocus, l
-bind = SUPER, H, movefocus, l
-
-bind = SUPER, right, movefocus, r
-bind = SUPER, L, movefocus, r
-
-bind = SUPER, up, movefocus,u
-bind = SUPER, K, movefocus, u
-
-bind = SUPER, down, movefocus,d
-bind = SUPER, J, movefocus, d
-
-bind = SUPER,1,workspace,1
-bind = SUPER,2,workspace,2
-bind = SUPER,3,workspace,3
-bind = SUPER,4,workspace,4
-bind = SUPER,5,workspace,5
-bind = SUPER,6,workspace,6
-bind = SUPER,7,workspace,7
-bind = SUPER,8,workspace,8
-bind = SUPER,9,workspace,9
-bind = SUPER,0,workspace,10
-
-bind = SUPERSHIFT,1,movetoworkspace,1
-bind = SUPERSHIFT,2,movetoworkspace,2
-bind = SUPERSHIFT,3,movetoworkspace,3
-bind = SUPERSHIFT,4,movetoworkspace,4
-bind = SUPERSHIFT,5,movetoworkspace,5
-bind = SUPERSHIFT,6,movetoworkspace,6
-bind = SUPERSHIFT,7,movetoworkspace,7
-bind = SUPERSHIFT,8,movetoworkspace,8
-bind = SUPERSHIFT,9,movetoworkspace,9
-bind = SUPERSHIFT,0,movetoworkspace,10
-
-bind = SUPER,mouse_down,workspace,e+1
-bind = SUPER,mouse_up,workspace,e-1
-
-#reload hyprland
-bind = SUPERSHIFT, R, exec, hyprctl reload
-
-## Brightness
-bind =, XF86MonBrightnessUp, exec, brightnessctl set +5%
-bind =, XF86MonBrightnessDown, exec, brightnessctl set 5%-
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 
-## Media player controls
-bind =, XF86AudioPlay, exec, playerctl play-pause
-bind =, XF86AudioPause, exec, playerctl play-pause
-bind =, XF86AudioNext, exec, playerctl next
-bind =, XF86AudioPrev, exec, playerctl previous
+# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+$mod = SUPER
+
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mod, T, exec, $terminal
+bind = $mod, Q, killactive,
+bind = $mod Shift, E, exec, swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit hyprland? This will end your Wayland session.' -b 'Yes, exit hyprland' 'killall Hyprland'
+bind = $mod, E, exec, $fileManager
+bind = $mod, R, exec, $menu
+bind = $mod, F, fullscreen
+bind = $mod, Y, pin
+bind = $mod, C, centerwindow
+bind = $mod, M, fullscreen, 1
+bind = $mod, space, togglefloating,
+
+# Move focus with mod + vim keys
+bind = $mod, H, movefocus, l
+bind = $mod, L, movefocus, r
+bind = $mod, K, movefocus, u
+bind = $mod, J, movefocus, d
+
+# Move focused window with mod + Shift + vim keys
+bind = $mod Shift, H, movewindow, l
+bind = $mod Shift, L, movewindow, r
+bind = $mod Shift, K, movewindow, u
+bind = $mod Shift, J, movewindow, d
+
+# Switch workspaces with mod + [0-9]
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod, 0, workspace, 10
+
+# Move active window to a workspace with mod + SHIFT + [0-9]
+bind = $mod Shift, 1, movetoworkspacesilent, 1
+bind = $mod Shift, 2, movetoworkspacesilent, 2
+bind = $mod Shift, 3, movetoworkspacesilent, 3
+bind = $mod Shift, 4, movetoworkspacesilent, 4
+bind = $mod Shift, 5, movetoworkspacesilent, 5
+bind = $mod Shift, 6, movetoworkspacesilent, 6
+bind = $mod Shift, 7, movetoworkspacesilent, 7
+bind = $mod Shift, 8, movetoworkspacesilent, 8
+bind = $mod Shift, 9, movetoworkspacesilent, 9
+bind = $mod Shift, 0, movetoworkspacesilent, 10
+
+# Example special workspace (scratchpad)
+bind = SUPER, N, movetoworkspacesilent, special
+bind = $mod SHIFT, N, togglespecialworkspace,
 
 
-# Volume
-bind =, XF86AudioRaiseVolume, exec, pamixer -i 2
-bind =, XF86AudioLowerVolume, exec, pamixer -d 2
-bind =, XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind = SUPERSHIFT, M, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind =, XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+#bindsym $mod+v exec cliphist toggle
+bind = $mod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+#bind = $mod SHIFT, V, exec, ~/.config/hypr/scripts/paste.sh
+
+# Toggle Notification Center
+bind = $mod Shift, i, exec, swaync-client -t -sw
+
+#Lockscreen
+bind = $mod, Escape, exec, swaylock
+
+bind = $mod Control, down, exec, amixer set Master 2%-       #decrease audio
+bind = $mod Control, up, exec, amixer set Master 2%+       #decrease audio
+bind =, XF86AudioLowerVolume, exec, amixer set Master 2%-       #decrease audio
+bind =, XF86AudioRaiseVolume, exec, amixer set Master 2%+            #increase audio 
+bind = $mod Shift, M, exec, amixer set Master toggle      #mute audio 
+
+#Media keys supported by vlc, spotify, audacious, xmm2, ...
+bindl =, XF86AudioPlay, exec, playerctl play-pause
+bindl =, XF86AudioNext, exec, playerctl next
+bindl =, XF86AudioPrev, exec, playerctl previous
+bindl =, XF86AudioStop, exec, playerctl stop
+bindl =, XF86AudioMute, exec, pactl set-sink-mute 0 toggle              #mute audio 
+bindl = $mod Shift, period, exec, playerctl next
+bindl = $mod Shift, comma, exec, playerctl previous
+
+#Control brightness
+bindl =, XF86MonBrightnessUp, exec, brightnessctl s +10%
+bindl =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+# install ttf-font-awesome 6.xx
+bind = $mod, X, exec, nwg-bar
+
+#scripts
+bind = $mod, P, exec, ~/.config/sway/wallpaper.sh -w
+#bind = $mod+o exec ~/.config/sway/audio_output.sh
+bind = $mod, U, exec, ~/scripts/mpv.sh 
+
+#Screenshot bebe
+#copy a section of screen and edit with swappy
+bind =  $mod Control, s, exec, grim -g "$(slurp)" - | swappy -f - 
+#copy a section of screen and copy to clipboard
+bind =  $mod Shift, s, exec, grimshot --notify copy area
+#Copy screenshot to clipboard
+bind =  Control, Print, exec, grimshot --notify copy screen
+#Grab a swappshot from a specific window under Sway, using swaymsg and jq:
+bind =  $mod, Print, exec, ~/.config/sway/screenshot.sh
+#save full screen screenshot
+bind =  , Print, exec, grimshot --notify save screen 
+#image_to_ocr lets go
+bind =  $mod Shift, t, exec, wl-copy "$(grim -g "$(slurp)" - | tesseract -c debug_file=/dev/null -l eng - -)"
 
 
-# Screenshots
-bind = , Print, exec, grimshot --notify save screen
-bind = SUPER,Print, exec, grimshot --notify copy screen
-bind = SUPERSHIFT, S, exec, grimshot --notify copy area
+# Scroll through existing workspaces with mod + scroll
+#bind = $mod, mouse_down, workspace, e+1
+#bind = $mod, mouse_up, workspace, e-1
 
-
-#Windows Rules
-windowrule=float, ^(connman-gtk)$
-
+# Move/resize windows with mod + LMB/RMB and dragging
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
