--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,10 +8,10 @@
 # title=foot
 # locked-title=no
 
-font=JetBrainsMono Nerd FontMono:style=Regular:size=13
-font-bold=JetBrainsMono Nerd FontMono:style=Bold:size=13
-font-italic=JetBrainsMono Nerd FontMono:style=Italic:size=13
-font-bold-italic=JetBrainsMono Nerd FontMono:style=Bold Italic:size=13
+font=JetBrainsMono NF:style=Regular:size=13
+font-bold=JetBrainsMono NF:style=Bold:size=13
+font-italic=JetBrainsMono NF:style=Italic:size=13
+font-bold-italic=JetBrainsMono NF:style=Bold Italic:size=13
 # line-height=<font metrics>
 # letter-spacing=0
 # horizontal-letter-offset=0
@@ -215,3 +215,4 @@ bright7=c0caf5
 # select-word=BTN_LEFT-2
 # select-word-whitespace=Control+BTN_LEFT-2
 # select-row=BTN_LEFT-3
+
