--- a/swaync/config.json
+++ b/swaync/config.json
@@ -1,46 +1,63 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
-
   "positionX": "right",
   "positionY": "top",
-  "layer": "overlay",
-  "control-center-margin-top": 8,
-  "control-center-margin-bottom": 8,
-  "control-center-margin-right": 8,
-  "control-center-margin-left": 8,
-  "control-center-width": 500,
-  "control-center-height": 600,
-  "fit-to-screen": false,
-  "cssPriority": "user",
+  "layer": "top",
+  "control-center-layer": "top",
+  "layer-shell": true,
+  "cssPriority": "application",
+  "control-center-margin-top": 0,
+  "control-center-margin-bottom": 0,
+  "control-center-margin-right": 0,
+  "control-center-margin-left": 0,
+  "notification-2fa-action": true,
+  "notification-inline-replies": false,
   "notification-icon-size": 64,
   "notification-body-image-height": 100,
   "notification-body-image-width": 200,
-  "timeout": 6,
-  "timeout-low": 4,
+  "timeout": 10,
+  "timeout-low": 5,
   "timeout-critical": 0,
+  "fit-to-screen": true,
+  "control-center-width": 500,
+  "control-center-height": 600,
   "notification-window-width": 500,
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
   "transition-time": 200,
-  "hide-on-clear": true,
+  "hide-on-clear": false,
   "hide-on-action": true,
   "script-fail-notify": true,
-
-"notification-visibility": {
+  "scripts": {
+    "example-script": {
+      "exec": "echo 'Do something...'",
+      "urgency": "Normal"
+    },
+    "example-action-script": {
+      "exec": "echo 'Do something actionable!'",
+      "urgency": "Normal",
+      "run-on": "action"
+    }
+  },
+  "notification-visibility": {
     "example-name": {
       "state": "muted",
       "urgency": "Low",
       "app-name": "Spotify"
     }
   },
-
   "widgets": [
+    "inhibitors",
     "title",
     "dnd",
-    "mpris",
     "notifications"
   ],
   "widget-config": {
+    "inhibitors": {
+      "text": "Inhibitors",
+      "button-text": "Clear All",
+      "clear-all-button": true
+    },
     "title": {
       "text": "Notifications",
       "clear-all-button": true,
@@ -59,4 +76,3 @@
     }
   }
 }
-
