--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,7 +50,6 @@ input {
     repeat_rate = 30
     accel_profile = flat
     kb_options = caps:escape
-    kb_file = "/home/shaka/.xkb/symbols/65-percent-escape-tilde-grave"
 
     touchpad {
         natural_scroll = true
@@ -138,7 +137,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 misc {
@@ -150,11 +149,11 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-#device:1241:41132:E-Signal_USB_Gaming_Mouse {
-#    scroll_factor = 1.3
-#}
-device:elan0412:01-04f3:3162-touchpad {
-    sensitivity = 0.6
+
+device {
+    #keyboard
+    name = by-tech-gaming-keyboard
+    kb_layout = 65-percent-escape-tilde-grave
 }
 
 # Example windowrule v1
@@ -162,7 +161,7 @@ device:elan0412:01-04f3:3162-touchpad {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+#windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -274,8 +273,8 @@ bind =  $mod Shift, t, exec, wl-copy "$(grim -g "$(slurp)" - | tesseract -c debu
 
 
 # Scroll through existing workspaces with mod + scroll
-#bind = $mod, mouse_down, workspace, e+1
-#bind = $mod, mouse_up, workspace, e-1
+bind = $mod, mouse_down, workspace, e+1
+bind = $mod, mouse_up, workspace, e-1
 
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
