--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -40,7 +40,7 @@ font-bold-italic=JetBrainsMono NF:style=Bold Italic:size=13
 # command-focused=no
 
 [scrollback]
-# lines=1000
+ lines=2000
 # multiplier=3.0
 # indicator-position=relative
 # indicator-format=
