--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -137,7 +137,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = true
+    workspace_swipe = false
 }
 
 misc {
@@ -252,6 +252,9 @@ bindl =, XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # install ttf-font-awesome 6.xx
 bind = $mod, X, exec, nwg-bar
 
+#Hide waybar, clear clipboard history as well as clipboard.
+bind = $mod, B, exec, killall -SIGUSR1 waybar && rm -fr ~/.cache/cliphist && wl-copy --clear
+
 #scripts
 bind = $mod, P, exec, ~/.config/sway/wallpaper.sh -w
 #bind = $mod+o exec ~/.config/sway/audio_output.sh
@@ -279,3 +282,7 @@ bind = $mod, mouse_up, workspace, e-1
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
+
+#Window rules
+
+windowrule=float,^(pavucontrol)$
